# classpose

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  pytest.toml
custom_tests/: test_hed_augmentation.py  test_oversampling_strategies.py
dockerfiles/: Dockerfile
paper_experiments/: calculate-gradients.py  count_cells_per_class.py  dataset_to_hdf5.py  run_cellpose_semantic.py  run_inference.py  run_training.py  summarise_features.py
paper_experiments/scripts/: count_cell_types.py  feature_extraction.py  iou_between_gt_and_squares.py  organise-datasets.py  test_classpose_dataset.py
qupath-extension-classpose/: README.md  build.gradle.kts  settings.gradle.kts
qupath-extension-classpose/src/main/java/qupath/ext/classpose/: ClassposeExtension.java
qupath-extension-classpose/src/main/java/qupath/ext/classpose/actions/: ClassposeArtefactDetectionAction.java  ClassposePredictWSIAction.java  ClassposeTissueDetectionAction.java
qupath-extension-classpose/src/main/java/qupath/ext/classpose/io/: GeoJsonImporter.java
qupath-extension-classpose/src/main/java/qupath/ext/classpose/py/: PythonRunner.java
qupath-extension-classpose/src/main/java/qupath/ext/classpose/util/: AbstractClassposeAction.java  CliArgs.java  ImportConventions.java  PathsUtil.java  Prefs.java
scripts/: summarise_features.py
src/classpose/: __init__.py  core.py  dataset.py  distributed.py  log.py  model_configs.py  models.py  train.py  train_utils.py  unet.py  utils.py  vit_sam.py  wsi_utils.py
src/classpose/entrypoints/: calculate_metrics.py  outputs.py  predict_wsi.py  predict_wsi_cpsam.py
src/classpose/grandqc/: wsi_artefact_detection.py  wsi_qc_helpers.py  wsi_tissue_detection.py
src/classpose/metrics/: pq.py  stats_utils.py  utils.py
src/classpose/transforms/: __init__.py  augmentation_configs.py  he_staining.py  hed.py  image_quality.py  stardist_augmentation.py  transforms.py
tests/: test_czi_reader.py  test_dataset_hdf5.py  test_grandqc_integration.py  test_polygon_handling.py  test_prediction_integration.py  test_remove_border_instances.py  test_training_distributed.py
