[project]
name = "classpose"
version = "0.1.0"
description = "A foundation model-driven whole slide image-scale cell phenotyping method with QuPath integration resources"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cellpose>=4.0.8",
    "dask>=2025.2.0,<2026.1.2",
    "dask-image>=2024.5.3",
    "dask-jobqueue>=0.9.0",
    "fastremap>=1.15.1",
    "huggingface-hub>=0.35.3",
    "matplotlib>=3.10.3",
    "natsort>=8.4.0",
    "numba>=0.61.2",
    "numpy>=2.0.2",
    "opencv-python-headless>=4.11.0.86",
    "openslide-bin>=4.0.0.11",
    "openslide-python>=1.4.2",
    "pandas<3.0.0",
    "pre-commit>=4.3.0",
    "pydantic>=2.11.9",
    "pyyaml>=6.0.2",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "segmentation-models-pytorch>=0.3.0",
    "shapely>=2.1.1",
    "spatialdata>0.6.2",
    "spatialdata-io>=0.6.0",
    "tifffile>=2025.3.30",
    "timm>=0.4.0, <0.5",
    "torch>=2.6.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "zarr>=3.1.5",
]

[project.optional-dependencies]
notebook = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "notebook>=7.4.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["classpose"]

[project.scripts]
classpose-predict-wsi = "classpose.entrypoints.predict_wsi:main_with_args"
classpose-calculate-metrics = "classpose.entrypoints.calculate_metrics:main_with_args"
